--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,118 +1,131 @@
 <div class="main-container">
 
   <div class="sub-container" *ngIf="!isOtherRoute()">
-    <mat-toolbar>
-      <span>Helpers</span>
-    </mat-toolbar>
 
-    
+    <mat-toolbar>
+      <span style="font-weight: 600; font-size: 1.5rem; font-family:Verdana, Geneva, Tahoma, sans-serif ">
+        Helpers
+      </span>
+    </mat-toolbar>
 
     <mat-card class="controls-bar" id="1">
       <div id="control-grid2" class="controls-grid">
-
-
-        <button mat-raised-button [matMenuTriggerFor]="filterMenu" #menuTrigger="matMenuTrigger">
-          <mat-icon>filter_alt</mat-icon>
-        </button>
-
-        <mat-menu #filterMenu [hasBackdrop]="true">
-          <div (click)="$event.stopPropagation()"> 
-
-            <div style="padding: 8px 16px 4px 16px; font-weight: 500;">Filter By</div>
-
-            <button *ngIf="serviceFilter.value?.length" mat-icon-button color="warn" (click)="serviceFilter.setValue([])">Reset</button>
-            <mat-form-field appearance="outline" style="width: 200px; margin: 0 16px 16px 16px;">
-                <mat-label>Services</mat-label>
-                
-                <mat-select [formControl]="serviceFilter" multiple (selectionChange)="filterHelpersByServiceChange($event)">
-                    <mat-select-trigger>
-                        {{serviceFilter.value?.[0] || ''}}
-                        @if ((serviceFilter.value?.length || 0) > 1) {
-                            <span class="example-additional-selection">
-                            (+{{(serviceFilter.value?.length || 0) - 1}})
-                            </span>
-                        }
-                    </mat-select-trigger>
-                    
-                    <mat-checkbox [checked]="areAllServicesSelected()" [indeterminate]="areServicesIndeterminate()" (change)="toggleSelectAllServices($event)">
-                        Select All
-                    </mat-checkbox>
-                    
-                    <mat-option *ngFor="let topping of servicesList" [value]="topping">
-                        {{ topping }}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-
-            
-            <mat-form-field appearance="outline" style="width: 200px; margin: 0 16px 16px 16px;">
-              <mat-label>Organizations</mat-label>
-              <mat-select [formControl]="organizationFilter" multiple (selectionChange)="filterHelpersByOrganizationChange($event)">
-          
-                  <mat-select-trigger>
-                      {{organizationFilter.value?.[0] || ''}}
-                      @if ((organizationFilter.value?.length || 0) > 1) {
-                          <span class="example-additional-selection">
-                          (+{{(organizationFilter.value?.length || 0) - 1}})
-                          </span>
-                      }
-                  </mat-select-trigger>
-
-                  <mat-checkbox
-                    [checked]="areAllOrganizationsSelected()"
-                    [indeterminate]="areOrganizationsIndeterminate()"
-                    (change)="toggleSelectAllOrganizations($event)">
-                    Select All
-                  </mat-checkbox>
-
-                <mat-option *ngFor="let organization of organizationsList" [value]="organization">
-                  {{ organization}}
-                </mat-option>
-
-              </mat-select>
-            </mat-form-field>
-
-            <button *ngIf="organizationFilter.value?.length" mat-icon-button color="warn" (click)="organizationFilter.setValue([])">Reset</button>
-            <div>
-              <button mat-stroked-button color="primary" (click)="reserAllFilters()" >reset</button>
-              <button mat-flat-button color="primary" (click)="applyFilter(); menuTrigger.closeMenu()" >Apply</button>
-            </div>
-          </div>
-        </mat-menu>
 
         <button mat-raised-button [matMenuTriggerFor]="sortMenu">
           <mat-icon>arrow_upward</mat-icon>
           <mat-icon>arrow_downward</mat-icon>
         </button>
 
-        <mat-menu #sortMenu style="width: 200px;">
 
-          <div style="padding: 8px 16px; font-weight: 500;">
-            Sort By
-          </div>
-          <div >
-            <button mat-menu-item (click)="sortHelpers('name')">
-              Sort by Name
-            </button>
-            <button mat-menu-item (click)="sortHelpers('employeeId')">
-              Sort by EmployeeId
-            </button>
-          </div>
+        <mat-menu #sortMenu="matMenu" panelClass="sort-menu-panel">
+          <div class="sort-header" style="margin-left: 10px;">Sort by</div>
+          <button mat-menu-item 
+                  class="sort-option" 
+                  [class.selected]="currentSortBy === 'fullName'"
+                  (click)="sortHelpers('fullName'); $event.stopPropagation()">
+            <span>Helpers Name(A-Z)</span>
+            <mat-icon *ngIf="currentSortBy === 'fullName'" class="check-icon">check</mat-icon>
+          </button>
           
+          <button mat-menu-item 
+                  class="sort-option" 
+                  [class.selected]="currentSortBy === 'employeeId'"
+                  (click)="sortHelpers('employeeId'); $event.stopPropagation()">
+            <span>Employee ID</span>
+            <mat-icon *ngIf="currentSortBy === 'employeeId'" class="check-icon">check</mat-icon>
+          </button>
         </mat-menu>
 
-        <!-- <mat-form-field  class="search-input"  appearance="outline">
-          <mat-label>Search</mat-label>
-          <input i matInput placeholder="Name, EmployeeId, Phone" 
-                  [(ngModel)]="searchQuery" 
-                  (ngModelChange)="fetchBySearch()">
-        </mat-form-field> -->
+        <button style="width: 3px;" mat-raised-button [matMenuTriggerFor]="filterMenu" #menuTrigger="matMenuTrigger">
+          <mat-icon>filter_alt</mat-icon>
+        </button>
+
+        <mat-menu #filterMenu [hasBackdrop]="true">
+          <div (click)="$event.stopPropagation()"> 
+
+            <div style="padding: 16px; font-weight: 500;">Filter By</div>
+
+            <div class="filter-section">
+              <button *ngIf="serviceFilter.value?.length" 
+                class="filter-reset"
+                mat-icon-button 
+                color="warn" 
+                (click)="serviceFilter.setValue([])">
+                Reset
+              </button>
+              <mat-form-field appearance="outline" style="width: 200px; margin:0 20px;">
+                  <mat-label>Services</mat-label>
+                  
+                  <mat-select [formControl]="serviceFilter" multiple (selectionChange)="filterHelpersByServiceChange($event)">
+                      <mat-select-trigger>
+                          {{serviceFilter.value?.[0] || ''}}
+                          @if ((serviceFilter.value?.length || 0) > 1) {
+                              <span class="example-additional-selection">
+                              (+{{(serviceFilter.value?.length || 0) - 1}})
+                              </span>
+                          }
+                      </mat-select-trigger>
+                      
+                      <mat-checkbox [checked]="areAllServicesSelected()" [indeterminate]="areServicesIndeterminate()" (change)="toggleSelectAllServices($event)">
+                          Select All
+                      </mat-checkbox>
+                      
+                      <mat-option *ngFor="let topping of servicesList" [value]="topping">
+                          {{ topping }}
+                      </mat-option>
+                  </mat-select>
+              </mat-form-field>
+            </div>
+            
+            <div class="filter-section">
+              <button *ngIf="organizationFilter.value?.length" 
+                class="filter-reset"
+                mat-icon-button 
+                color="warn" 
+                (click)="organizationFilter.setValue([])">
+                Reset
+              </button>
+              <mat-form-field appearance="outline" style="width: 200px; margin: 0 20px;">
+                <mat-label>Organizations</mat-label>
+                <mat-select [formControl]="organizationFilter" multiple (selectionChange)="filterHelpersByOrganizationChange($event)">
+            
+                    <mat-select-trigger>
+                        {{organizationFilter.value?.[0] || ''}}
+                        @if ((organizationFilter.value?.length || 0) > 1) {
+                            <span class="example-additional-selection">
+                            (+{{(organizationFilter.value?.length || 0) - 1}})
+                            </span>
+                        }
+                    </mat-select-trigger>
+
+                    <mat-checkbox
+                      [checked]="areAllOrganizationsSelected()"
+                      [indeterminate]="areOrganizationsIndeterminate()"
+                      (change)="toggleSelectAllOrganizations($event)">
+                      Select All
+                    </mat-checkbox>
+
+                  <mat-option *ngFor="let organization of organizationsList" [value]="organization">
+                    {{ organization }}
+                  </mat-option>
+
+                </mat-select>
+              </mat-form-field>
+            </div>
+
+            
+            <div style="display: flex; justify-content: space-between; padding: 8px 16px;">
+              <button mat-stroked-button color="primary" (click)="resetFilters()">reset</button>
+              <button mat-flat-button color="primary" (click)="applySearchAndFilters(); menuTrigger.closeMenu()">Apply</button>
+            </div>
+          </div>
+        </mat-menu>
 
         <button mat-raised-button class="search-div" style="background-color: white !important; border: 1px solid #e5e7eb; display: flex; align-items: center; padding: 0 8px; border-radius: 4px; height: 33px;">
           <mat-icon>search</mat-icon>
           <input class="input-no-hover" placeholder="Name, EmployeeId, Phone" 
                   [(ngModel)]="searchQuery" 
-                  (ngModelChange)="fetchBySearch()"
+                  (ngModelChange)="applySearchAndFilters()"
                   style="border: none; width: 200px;">
         </button>
 
@@ -129,6 +142,7 @@
       </div>
 
       <div class="add-helper-div">
+        <mat-icon>download</mat-icon> 
         <button mat-raised-button color="primary" [routerLink]="['/add-edit-helper']" [queryParams]="{ mode: 'add' }">
           Add Helper
         </button>
@@ -137,17 +151,24 @@
 
     <div *ngIf="!isOtherRoute()" class="home-container">
       <div class="sidebar">
+        
         <div *ngFor="let helper of helpers" 
             class="helper-card"
             [class.active]="selectedHelper?.employeeId === helper.employeeId"
             (click)="onClick(helper.employeeId)">
+
           <div class="helper-div-1">
+
             <img class="helper-pic" *ngIf="helper.photo" [src]="getPhotoUrl(helper.photo)">
-            <div class="helper-pic" *ngIf="!helper.photo">{{ getInitials(helper.fullName) }}</div>
+            <!-- <div class="helper-pic" *ngIf="!helper.photo">{{ getInitials(helper.fullName) }}</div> -->
+            <img class="helper-pic" *ngIf="!helper.photo" [src]="'https://ui-avatars.com/api/?name=' + getInitials(helper.fullName) + '&background=random&color=fff&rounded=true&length=2'">
+
           </div>
           <div class="helper-div-2">
+
             <div class="helper-name">{{ helper.fullName }}</div>
             <div class="helper-id">ID: {{ helper.employeeId }}</div>
+
           </div>
         </div>
       </div>
@@ -160,8 +181,12 @@
           <div class="header">
 
             <div class="avatar-section">
-              <div class="avatar" *ngIf="!selectedHelper.photo">{{ getInitials(selectedHelper.fullName) }}</div>
+              <!-- <div class="avatar" *ngIf="!selectedHelper.photo">{{ getInitials(selectedHelper.fullName) }}</div> -->
+              <img class="avatar" 
+                *ngIf="!selectedHelper.photo" 
+                [src]="'https://ui-avatars.com/api/?name=' + getInitials(selectedHelper.fullName) + '&background=random&color=fff&rounded=true&length=2'">
               <img class="avatar-pic" *ngIf="selectedHelper.photo" [src]="getPhotoUrl(selectedHelper.photo)">
+              
               <div class="name-role">
                 <h2>{{ selectedHelper.fullName }}</h2>
                 <p>{{ selectedHelper.services }}</p>
@@ -169,9 +194,21 @@
             </div>
 
             <div class="actions">
-              <button mat-icon-button [routerLink]="['/add-edit-helper',selectedHelper.employeeId]" [queryParams]="{ mode: 'edit' }" (click)="clicked()"><mat-icon>edit</mat-icon></button>
+              <button mat-icon-button 
+                [routerLink]="['/add-edit-helper',selectedHelper.employeeId]" 
+                [queryParams]="{ mode: 'edit' }" 
+                (click)="clicked()">
+                  <mat-icon>
+                    edit
+                  </mat-icon>
+              </button>
               <!-- <button mat-icon-button [routerLink]="['/edit-helper',selectedHelper.employeeId]" (click)="clicked()"><mat-icon>edit</mat-icon></button> -->
-              <button mat-icon-button (click)="deleteHelper(selectedHelper.employeeId)"><mat-icon>delete</mat-icon></button>
+              <button mat-icon-button 
+                (click)="deleteHelper(selectedHelper.employeeId)">
+                  <mat-icon>
+                    delete
+                  </mat-icon>
+              </button>
             </div>
 
           </div>
@@ -202,7 +239,9 @@
               <div><a 
                 [href]="getFileUrl(selectedHelper.kycDocument)" 
                 target="_blank"
-                style="display: flex; align-items: center; text-decoration: none;"><mat-icon>visibility</mat-icon>View</a></div>
+                style="display: flex; align-items: center; text-decoration: none;">
+                <mat-icon>visibility</mat-icon>
+                View</a></div>
             </div>
           </div>
 
@@ -221,10 +260,23 @@
   </div>
   
 
-  <div *ngIf="isOtherRoute()" class="form-container" >
+  <!-- <div *ngIf="isOtherRoute()" class="form-container" >
     <button [routerLink]="['../']">Go to Home</button>
     <router-outlet></router-outlet>
-  </div>
+  </div> -->
 
+  <div *ngIf="isOtherRoute()" class="form-container">
+
+    <!-- <div class="form-header">
+      <button mat-raised-button [routerLink]="['../']"><mat-icon>arrow_back</mat-icon></button>
+    </div> -->
+
+    <div class="form-body">
+      <div class="routed-wrapper">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+
+  </div>
   
 </div>
