--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+html, body, app-root {
+  min-height: 100vh;
+}
+
+// body, html {
+//   font-family: 'Poppins', sans-serif;
+//   font-weight: 400;
+//   color: #1f2937;
+// }
